[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Node2D.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Levels/level.gd" type="Script" id=5]
[ext_resource path="res://sounds/next_level.wav" type="AudioStream" id=6]
[ext_resource path="res://Levels/intro1.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/theme.wav" type="AudioStream" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." groups=[
"Player",
] instance=ExtResource( 2 )]
position = Vector2( -75, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.581139, 0 )
rotating = true
current = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Camera2D"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 3, 3 )
z_index = -5
texture = ExtResource( 4 )

[node name="Level" type="Node2D" parent="." groups=[
"level manager",
]]
script = ExtResource( 5 )

[node name="transition_sound" type="AudioStreamPlayer" parent="Level"]
stream = ExtResource( 6 )

[node name="Level1" parent="Level" instance=ExtResource( 7 )]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
[connection signal="respawn" from="Player" to="Level" method="_on_Player_respawn"]
[connection signal="end_transition" from="Level" to="Player" method="_on_Level_end_transition"]
[connection signal="start_transition" from="Level" to="Player" method="_on_Level_start_transition"]
